--- a/.github/workflows/test_inf2.yml
+++ b/.github/workflows/test_inf2.yml
@@ -2,10 +2,12 @@ name: Optimum neuron / Test INF2
 
 on:
   push:
-    branches: [ main ]
-    paths:
-      - "setup.py"
-      - "optimum/**.py"
+    branches: 
+      - "ci-test"
+    #branches: [ main ]
+    #paths:
+    #  - "setup.py"
+    #  - "optimum/**.py"
   pull_request:
     branches: [ main ]
     paths:
@@ -19,7 +21,7 @@ concurrency:
 jobs:
   do-the-job:
     name: Run INF2 tests
-    runs-on: [self-hosted, 1-aws-inf2, 32-cpu, ci] # run the job on the newly created runner
+    runs-on: [self-hosted, 1-aws-inf2, 32-cpu, test-ci] # run the job on the newly created runner
     env:
       AWS_REGION: us-east-1
     steps:
