--- a/.github/workflows/test_inf2.yml
+++ b/.github/workflows/test_inf2.yml
@@ -33,7 +33,7 @@ jobs:
           EOF
           wget -qO - https://apt.repos.neuron.amazonaws.com/GPG-PUB-KEY-AMAZON-AWS-NEURON.PUB | sudo apt-key add -
           sudo apt-get update -y
-          sudo apt-get install linux-headers-$(uname -r) -y
+          #sudo apt-get install linux-headers-$(uname -r) -y
           sudo apt-get install aws-neuronx-dkms aws-neuronx-oci-hook aws-neuronx-runtime aws-neuronx-collectives
       - name: Check AMI
         run: dpkg -l | grep neuron
