--- a/.github/workflows/test_inf2.yml
+++ b/.github/workflows/test_inf2.yml
@@ -34,7 +34,8 @@ jobs:
           wget -qO - https://apt.repos.neuron.amazonaws.com/GPG-PUB-KEY-AMAZON-AWS-NEURON.PUB | sudo apt-key add -
           sudo apt-get update -y
           #sudo apt-get install linux-headers-$(uname -r) -y
-          sudo apt-get install aws-neuronx-dkms aws-neuronx-oci-hook aws-neuronx-runtime-lib aws-neuronx-collectives -y
+          #sudo apt-get install udev pciutils 
+          sudo apt-get install aws-neuronx-tools aws-neuronx-oci-hook aws-neuronx-runtime-lib aws-neuronx-collectives -y
       - name: Check AMI
         run: dpkg -l | grep neuron
       - name: Checkout
